# AsymReg

./: .gitignore  .gitmodules  CMakeLists.txt  asymreg.cpp  asymreg.h  asymreg.kdev4  backprojection.h  constants.h  datasourcetablewidget.cpp  datasourcetablewidget.h  duration.cpp  duration.h  eigen.h  eigen_addons.h  eigen_densebaseaddons.h  eigen_io.h  eigen_iterator.h  interpol.cpp  interpol.h  main-cl.cpp  main.cpp  mainwindow.cpp  mainwindow.h  ode.h  plotter.cpp  plotter.h  plottersettings.cpp  plottersettings.h  plottersettingsdialog.cpp  plottersettingsdialog.h  radonoperator.h  svgviewer.cpp  svgviewer.h  unused_code.h
Matlab/: diplarbeit_chemnitz.m  numerical_integration.m  recording_angles.m  regularize_simple.m
cmake/: CheckBuildType.cmake  FindQtIOCompressor.cmake
test/dislin-test/: CMakeLists.txt  main.cpp
test/eigen-serializer/: CMakeLists.txt  main.cpp
